--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,10 +4,10 @@
     <strong><%= t('.author') %><i> Andex</i> 🖐😊</strong>
   </p>
   <p class="text-monospace font-italic">
-    <%= link_to 'Cвязаться со мной', new_feedback_path %>
+    <%= link_to t('.feedback'), new_feedback_path %>
   </p>
   <p>
-    <%= t('.info') %><%= link_to 'Thinknetica', 'http://thinknetica.com' %>
+    <%= t('.info') %> <%= link_to 'Thinknetica', 'http://thinknetica.com' %>
   </p>
   <p>
     <h3><%= current_year %></h3>
